# NoghreSod-Android

./: .cleanup-list.txt  .commitlintrc.json  .editorconfig  .gitignore  .gitignore.update  API_DOCUMENTATION.md  API_INTEGRATION.md  API_SECTIONS_3_4_5_FIXES.md  API_SECTIONS_6_7_8_FIXES.md  ARCHITECTURE.md  ARCHITECTURE_FIXES.md  ARCHITECTURE_GUIDE.md  ARCHITECTURE_IMPROVEMENTS.md  ARCHITECTURE_REFACTORING_COMPLETE.md  ARCHITECTURE_REFACTORING_GUIDE.md  BUILD_AND_REBUILD_GUIDE.md  BUILD_CONFIG_SECURITY_GUIDE.md  CLEANUP_CHECKLIST.md  CODE_ANALYSIS_REPORT.md  COMPLETE-PROJECT-AUDIT.md  COMPLETE_DATA_LAYER_ROADMAP.md  COMPLETE_DOCUMENTATION.md  COMPLETE_FIXES_24_ISSUES.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_IMPLEMENTATION_REPORT.md  COMPLETE_PROJECT_VALIDATION.md  COMPLETION_STATUS.md  COMPREHENSIVE_IMPLEMENTATION_PLAN.md  CONTRIBUTING.md  CRITICAL_FIXES_SUMMARY.md  CRITICAL_REFACTORING_GUIDE.md  DATA_LAYER_ARCHITECTURE.md  DATA_LAYER_DOCUMENTATION.md  DATA_LAYER_GUIDE.md  DATA_LAYER_SUMMARY.txt  DEPLOYMENT-GUIDE.md  DEPLOYMENT.md  DEVELOPMENT.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION.md  (+108 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: android-ci.yml  ci.yml  commitlint.yml  firebase-test.yml  pr-checks.yml  quality-gates.yml  release-v2.yml
app/: build.gradle.kts  build.gradle.variants.kts  keystore.properties.example  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-keys.cpp  native_keys.cpp
app/src/main/cpp/src/: keys.cpp
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml  (+2 more)
docs/: API_REFERENCE.md  ARCHITECTURE.md  CODE_STYLE_GUIDE.md  COMPREHENSIVE_REVIEW_28_ISSUES.md  DEEP_CLEANUP_GUIDE.md  DEPENDENCIES.md  DEPENDENCY_UPDATES.md  DEVELOPMENT_WORKFLOW.md  FEATURES.md  ISSUES_AND_FIXES.md  OFFLINE_FIRST.md  PROJECT_STRUCTURE.md  REFACTORING_EXECUTIVE_BRIEF.md  REFACTORING_GUIDE.md  REFACTORING_STATUS.md
docs/ADR/: ADR-001-MVVM-Architecture.md
gradle/: detekt.yml  libs.versions.toml
scripts/: check-dependencies.gradle  install-hooks.sh
(+742 files in other folders)
